--- a/css/style.css
+++ b/css/style.css
@@ -115,7 +115,11 @@
 	br.clear {
 		clear: both;
 	}
-
+  		
+  	p.ex {				
+    	width: 100%;
+		}
+		
 	/* Sections/Articles */
 	
 		section,
@@ -142,6 +146,8 @@
 		.row > article {
 			margin-bottom: 0;
 		}
+	
+	
 
 	/* Images */
 
@@ -157,7 +163,7 @@
 				top: 0;
 				width: 100%;
 				height: 100%;
-				background: url('images/overlay1.png');
+				background: url('css/images/overlay1.png');
 			}
 		
 			.image img {
