added physalia image

--- a/css/style.css
+++ b/css/style.css
@@ -1194,7 +1194,7 @@
 /*********************************************************************************/
 
 	#one {
-		background: url('images/overlay1.png'), url('../images/Lungbigger.jpg');
+		background: url('images/overlay1.png'), url('../images/physalia2.jpg');
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, center center;
